// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayUserCard should render a ClayUserCard with actionItems 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
      <div class="autofit-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="User Name actions" type="button">
            <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Edit</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Save</a>
    </li>
  </ul>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with actionItems and actionAriaLabel 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
      <div class="autofit-col">
        <div class="dropdown dropdown-action">
          <button aria-expanded="false" aria-haspopup="true" aria-label="toggle actions" class="dropdown-toggle btn component-action btn-unstyled" ref="triggerButton" title="User Name actions" type="button">
            <svg class="lexicon-icon lexicon-icon-ellipsis-v" focusable="false" role="presentation">
              <use xlink:href="icons.svg#ellipsis-v"></use>
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
<div class="dropdown-menu" ref="menu">
  <ul class="list-unstyled">
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Edit</a>
    </li>
    <li tabindex="-1">
      <a class=" dropdown-item" href="#1">Save</a>
    </li>
  </ul>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with classes 1`] = `
<div class="card-type-asset card user-card my-custom-class">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with href 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <a class=" card-title text-truncate" href="#1">User Name</a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with id 1`] = `
<div class="card-type-asset card user-card" id="myId">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with imageAlt 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with imageSrc 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="sticker-overlay">
          <img alt="" class="sticker-img" src="thumbnail_coffee.jpg">
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with subtitle 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
        <div class="card-subtitle text-truncate">Author Action</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user default icon 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user icon 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-camera" focusable="false" role="presentation">
            <use xlink:href="icons.svg#camera"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a ClayUserCard with user user color class 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-warning sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a disabled ClayUserCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left user-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input disabled="disabled" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-circle sticker-primary sticker-user-icon">
              <span class="inline-item">
                <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#user"></use>
                </svg>
              </span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a selectable ClayUserCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left user-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-circle sticker-primary sticker-user-icon">
              <span class="inline-item">
                <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#user"></use>
                </svg>
              </span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a selectable ClayUserCard with input \`name\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left user-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" name="checkbox01" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-circle sticker-primary sticker-user-icon">
              <span class="inline-item">
                <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#user"></use>
                </svg>
              </span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a selectable ClayUserCard with input \`value\` 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left user-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input class="custom-control-input" value="checkbox" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-circle sticker-primary sticker-user-icon">
              <span class="inline-item">
                <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#user"></use>
                </svg>
              </span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render a selected ClayUserCard 1`] = `
<div class="card-type-asset form-check form-check-card form-check-top-left user-card">
  <div class="card">
    <div class="aspect-ratio card-item-first">
      <div class="custom-control custom-checkbox">
        <label>
          <input checked="" class="custom-control-input" ref="input" type="checkbox">
          <span class="custom-control-label"></span>
          <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
            <span class="sticker sticker-circle sticker-primary sticker-user-icon">
              <span class="inline-item">
                <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#user"></use>
                </svg>
              </span>
            </span>
          </div>
        </label>
      </div>
    </div>
    <div class="card-body">
      <div class="card-row">
        <div class="autofit-col autofit-col-expand">
          <div class="card-title text-truncate">User Name</div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayUserCard should render the default markup 1`] = `
<div class="card-type-asset card user-card">
  <div class="aspect-ratio card-item-first">
    <div class="aspect-ratio-item aspect-ratio-item-center-middle aspect-ratio-item-fluid card-type-asset-icon">
      <span class="sticker sticker-circle sticker-primary sticker-user-icon">
        <span class="inline-item">
          <svg class="lexicon-icon lexicon-icon-user" focusable="false" role="presentation">
            <use xlink:href="icons.svg#user"></use>
          </svg>
        </span>
      </span>
    </div>
  </div>
  <div class="card-body">
    <div class="card-row">
      <div class="autofit-col autofit-col-expand">
        <div class="card-title text-truncate">User Name</div>
      </div>
    </div>
  </div>
</div>
`;
